--- a/style.css
+++ b/style.css
@@ -60,10 +60,19 @@ a {
     font-weight: 700;
     letter-spacing: 2px;
 }
-/* BUTTON 1*/
-.header-button {
+
+/* BUTTON */
+.button-92 {
+    --c: #fff;
+    /*textcolor*/background: linear-gradient(90deg, #0000 33%, #fff5, #0000 67%) var(--_p,100%)/300% no-repeat,  #FFB548;
+    /*backgroundcolor*/color: #0000;
+    border: none;
+    transform: perspective(500px) rotateY(calc(20deg*var(--_i,-1)));
+    text-shadow: calc(var(--_i,-1)* 0.08em) -.01em 0   var(--c),    calc(var(--_i,-1)*-0.08em)  .01em 2px #0004;
+    outline-offset: .1em;
+    transition: 0.3s;
     margin-top: 28px;
-    width: 260.362px;
+    width: 350px;
     height: 60px;
     border-radius: 4px;
     background-color: #FFB548;
@@ -72,24 +81,41 @@ a {
     transition: all 0.5s;
     color: #1A1917;
     font-family: Open Sans;
-    font-size: 16px;
     font-weight: 700;
     text-align: center;
     padding: 0 10px;
-}
-.header-button:hover {
-    background-color: #ca984c;
-}
-.header-button:active {
-    background-color: #85735e;
-}
-.header-button svg {
-    height: 23.95px;
-    stroke-width: 0.874px;
-    stroke: #1A1917;
-
-
-}
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+    -webkit-transform: perspective(500px) rotateY(calc(20deg*var(--_i,-1)));
+    -moz-transform: perspective(500px) rotateY(calc(20deg*var(--_i,-1)));
+    -ms-transform: perspective(500px) rotateY(calc(20deg*var(--_i,-1)));
+    -o-transform: perspective(500px) rotateY(calc(20deg*var(--_i,-1)));
+  }
+  
+  .button-92:hover,
+  .button-92:focus-visible {
+    --_p: 0%;
+    --_i: 1;
+  }
+  
+  .button-92:active {
+    text-shadow: none;
+    color: var(--c);
+    box-shadow: inset 0 0 9e9q #0005;
+    transition: 0s;
+  }
+  
+  .button-92 {
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-top: 20px;
+    cursor: pointer;
+    padding: .1em .3em;
+  }
+  
+  
 /* SECTION 2 */
 #main2 {
     background-image: url(./header-images/background2.svg);
@@ -129,6 +155,4 @@ a {
     letter-spacing: 3px;
     text-transform: uppercase;
 }
-
-
 
